# mcmcMixResolve

./: .gitignore  README.md
R/: Equations for Overdispersion.docx  PcrVarianceDerivation.R  constrainedMp.R
documentation/: notation.tex
openBUGS/: Prototype Model Calculations.xlsx  Prototype_model_1.odc  Prototype_model_1_data.odc  Prototype_model_1_inits.odc  Prototype_model_1_script.odc  Prototype_model_2.odc  Prototype_model_2_data.odc  Prototype_model_2_inits.odc  Prototype_model_2_script.odc  Prototype_model_3.odc  Prototype_model_3_data.odc  Prototype_model_3_inits.odc  Prototype_model_3_script.odc  Prototype_model_4.odc  Prototype_model_4_data.odc  Prototype_model_4_inits.odc  Prototype_model_4_inits2.odc  Prototype_model_4_script.odc  Prototype_model_5.odc  Prototype_model_5_data.odc  Prototype_model_5_inits.odc  Prototype_model_5_script.odc  Prototype_model_6.txt  Prototype_model_6_data.txt  Prototype_model_6_inits.txt  Prototype_model_6_negbinom.txt  Prototype_model_6_negbinom_data.txt  Prototype_model_6_negbinom_inits.txt  Prototype_model_6_negbinom_script.txt  Prototype_model_6_script.txt  Prototype_model_7.txt  Prototype_model_7_data.txt  Prototype_model_7_inits.txt  Prototype_model_7_script.txt
source/tools/hydra/: hydra_README.txt
source/tools/mcmc++/: mcmc++_README.txt
source/tools/mcmc++/mcmc++-1.2/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  NEWS  configure  configure.ac
source/tools/mcmc++/mcmc++-1.2/examples/: Makefile.am  Makefile.in  binomial.cpp  multinomial.cpp  norm.txt  normal-mixture.cpp  normal.cpp
source/tools/mcmc++/mcmc++-1.2/html/: DataTable_8cpp-source.html  DataTable_8cpp.html  DataTable_8cpp__incl.map  DataTable_8cpp__incl.md5  DataTable_8h-source.html  DataTable_8h.html  DataTable_8h__incl.map  DataTable_8h__incl.md5  Density_8cpp-source.html  Density_8cpp.html  Density_8cpp__incl.map  Density_8cpp__incl.md5  Density_8h-source.html  Density_8h.html  Density_8h__incl.md5  MCMC_8cpp-source.html  MCMC_8cpp.html  MCMC_8cpp__incl.map  MCMC_8cpp__incl.md5  MCMC_8h-source.html  MCMC_8h.html  MCMC_8h__incl.map  MCMC_8h__incl.md5  annotated.html  classAdaptMetroStepT-members.html  classAdaptMetroStepT.html  classAdaptMetroStepT__coll__graph.map  classAdaptMetroStepT__coll__graph.md5  classAdaptMetroStepT__inherit__graph.map  classAdaptMetroStepT__inherit__graph.md5  classBadCol.html  classBadRow.html  classDataTable-members.html  classDataTable.html  classFunctionStepT-members.html  classFunctionStepT.html  classFunctionStepT__coll__graph.map  classFunctionStepT__coll__graph.md5  classFunctionStepT__inherit__graph.map  classFunctionStepT__inherit__graph.md5  (+151 more)
source/tools/mcmc++/mcmc++-1.2/src/: Makefile.am  Makefile.in  lot.cpp
source/tools/mcmc++/mcmc++-1.2/src/mcmc++/: DataTable.h
source/tools/mcmc++/mcmc++-1.2/test/: DataTableTest.cpp  DensityTest.cpp  MCMCTest.cpp  Makefile.am  Makefile.in  intervalsTest.cpp  lotTest.cpp  mosquito-full.txt  mosquito-fzero.txt  row-labels.txt  test-count.txt  utilTest.cpp
source/tools/yadas/: yadas_README.txt
source/tools/yadas/Examples/1/: OneWayAnova.java
source/tools/yadas/Examples/2/: OneWayAnovaRSD.java
source/tools/yadas/Examples/3/: LinearModelExample.java
source/tools/yadas/Examples/4/: AddCommonPerturberExample.java
source/tools/yadas/Examples/5/: NewOneUpOneDownPerturber.java  NoncenteredANOVA.java
source/tools/yadas/Examples/6/: BetaBinomialExample.java
source/tools/yadas/Examples/7/: BinomialHypothesisTest.java
source/tools/yadas/Examples/8/: AttritionAnalysis.java  AttritionLikelihood.java
source/tools/yadas/Examples/9/: GenericSPSystem.java
source/tools/yadas/src/gov/lanl/yadas/: AbstractLogDensity.java  AddCommonPerturber.java  ArbitraryPerturber.java  AreTheyEqualArgument.java  ArgumentMaker.java  AttritionLikelihood.java  AttritionLikelihoodPlus.java  BasicMCMCBond.java  Beta.java  BetaBinomialExample.java  BetaPointMass.java  BetaShrinkage.java  Binomial.java  CauchyStandardPerturber.java  CommonLogitPerturber.java  ComponentIntegrator.java  ConstantArgument.java  DataFrame.java  Dirichlet.java  EqualizingPerturber.java  FasterAddCommonPerturber.java  FiniteMarkovChain.java  FiniteUpdate.java  Function.java  FunctionalArgument.java  Gamma.java  GammaMeanAlpha.java  Gaussian.java  GenericPerturber.java  GenericSeriesSystem.java  GroupArgument.java  GroupedSDPerturber.java  GroupedSumToOnePerturber.java  HiddenMarkov.java  IdentityArgument.java  IntegerMCMCParameter.java  InterceptSlopePerturber.java  InterleaveArgument.java  InverseGamma.java  InverseRootGamma.java  (+61 more)
