lib_LIBRARIES = libmcmc++.a 
nobase_include_HEADERS = mcmc++/DataTable.h mcmc++/Density.h mcmc++/MCMC.h \
                         mcmc++/intervals.h mcmc++/lot.h mcmc++/ratio.h \
                         mcmc++/statistics.h mcmc++/util.h

libmcmc___a_CPPFLAGS = -I.. ${RELEASE} $(BUILD_SYSTEM)

libmcmc___a_SOURCES = DataTable.cpp \
                    mcmc++/DataTable.h \
                    Density.cpp \
                    mcmc++/Density.h \
                    MCMC.cpp \
                    mcmc++/MCMC.h \
                    intervals.cpp \
                    mcmc++/intervals.h \
                    lot.cpp \
                    mcmc++/lot.h \
                    ratio.cpp \
                    mcmc++/ratio.h \
                    statistics.cpp \
                    mcmc++/statistics.h \
                    util.cpp \
                    mcmc++/util.h
